--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
+
+
 {
   "version": 2,
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -14,3 +15,4 @@
     }
   ]
 }
+
