--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
-
-
 {
   "version": 2,
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
@@ -15,4 +14,3 @@
     }
   ]
 }
-
