--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
+    "serverless": "^4.29.0",
     "serverless-http": "^4.0.0"
   }
 }
